fix bug 84409 [Incorrect request for page components if main page URL contains ";" character] Implementing param support according to RFC 2396, r=dougt, sr=rpotts